docs-theme: Fix z-index for search

--- a/docs-theme/css/extra.css
+++ b/docs-theme/css/extra.css
@@ -193,7 +193,7 @@ code {
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1040;
+    z-index: 1300;
     display: none;
     overflow: auto;
     overflow-y: scroll;
@@ -209,7 +209,7 @@ code {
     -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
     background-clip: padding-box;
-    z-index: 1210;
+    z-index: 1301;
 }
 .modal-header {
     padding: 15px;
